# NovaCPP-protection

./: CMakeLists.txt  README.md
include/novacpp/: common.hpp  packer.hpp  pe_hardener.hpp  transformer.hpp
samples/: demo.cpp
src/: main.cpp  packer.cpp  pe_hardener.cpp  transformer.cpp
