cmake_minimum_required(VERSION 3.20)
project(NovaCPP LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

add_executable(novacpp
    src/main.cpp
    src/transformer.cpp
    src/packer.cpp
)

target_include_directories(novacpp PRIVATE include)

if(MSVC)
    target_compile_options(novacpp PRIVATE /W4 /O2)
else()
    target_compile_options(novacpp PRIVATE -Wall -Wextra -Wpedantic -O2)
endif()
